testsuite/tests/builtins/pattern/both_pos_and_named/test.out
Error: Both positional and named value
   ╭─[ <working-dir>/script.lkql:1:1 ]
   │
 1 │ pattern("regex", regex="regex")
   │ ───────────────┬───────────────  
   │                ╰───────────────── The parameter "regex" has been provided a positional and a named value
───╯
